# race-slothy

./: .gitignore  README.md
artifact-manager-plugin/: CMakeLists.txt  README.md  build_it.sh  build_it_with_docker.sh  push_plugin_to_artifactory.sh
artifact-manager-plugin/include/private/: download.hpp  race.h  shard.hpp
artifact-manager-plugin/include/private/interfaces/race/: Message.h  RaceApp.h  RaceInterface.h  UserInputResponseCache.h
artifact-manager-plugin/include/private/util/: concat.hpp  crypto_secretbox.hpp  file_descriptor.hpp  hex.hpp  kernel.hpp  logger.hpp  profiler.hpp  rs_shard.hpp  sleep.hpp  sss.h
artifact-manager-plugin/include/public/: slothy-amp.hpp  slothy-http.hpp  slothy-race.hpp  slothy.hpp
artifact-manager-plugin/rib-resources/: manifest.json
artifact-manager-plugin/rib-resources/config-generator/: README.md  generate_configs.py  generate_configs.sh  generate_docker_compose.py  generate_docker_compose.sh  slothy_config_utils.py
artifact-manager-plugin/rib-resources/race-python-utils/race_python_utils/: comms_link_utils.py  file_utils.py  network_manager_request_utils.py  network_manager_utils.py  range_config_utils.py  requirements.txt  requirements_test.txt  twosix_whiteboard_utils.py
artifact-manager-plugin/rib-resources/race-python-utils/race_python_utils/network_manager/: __init__.py  client.py  committee.py  server.py
artifact-manager-plugin/rib-resources/race-python-utils/race_python_utils/network_manager/tests/: test_client.py  test_committee.py  test_server.py
artifact-manager-plugin/rib-resources/race-python-utils/race_python_utils/tests/: test_comms_link_utils.py  test_file_utils.py  test_network_manager_request_utils.py  test_network_manager_utils.py  test_range_config_utils.py  test_twosix_whiteboard_utils.py
artifact-manager-plugin/rib-resources/runtime-scripts/: configure_shard_registry.sh  get_status_of_external_services.sh  shard_plugins.sh  slothy-shard-host.yml  slothy-shard-registry.yml  slothy-shard-sharding.yml  start_external_services.sh  stop_external_services.sh  upload_artifacts.sh
artifact-manager-plugin/so/: libPluginTa1ClientTwoSixStub.so.json  libPluginTa1ClientTwoSixStub.so.json.0  libPluginTa1ClientTwoSixStub.so.json.1  libPluginTa1ClientTwoSixStub.so.json.2  libPluginTa1ClientTwoSixStub.so.json.3  libPluginTa1ClientTwoSixStub.so.json.4  libPluginTa1ClientTwoSixStub.so.json.5  libPluginTa1ClientTwoSixStub.so.json.6  libPluginTa1ClientTwoSixStub.so.json.7  libPluginTa1ServerTwoSixStub.so.json  libPluginTa1ServerTwoSixStub.so.json.0  libPluginTa1ServerTwoSixStub.so.json.1  libPluginTa1ServerTwoSixStub.so.json.2  libPluginTa1ServerTwoSixStub.so.json.3  libPluginTa1ServerTwoSixStub.so.json.4  libPluginTa1ServerTwoSixStub.so.json.5  libPluginTa1ServerTwoSixStub.so.json.6  libPluginTa1ServerTwoSixStub.so.json.7  libPluginTa2TwoSixStub.so.json  libPluginTa2TwoSixStub.so.json.0  libPluginTa2TwoSixStub.so.json.1  libPluginTa2TwoSixStub.so.json.2  libPluginTa2TwoSixStub.so.json.3  libPluginTa2TwoSixStub.so.json.4  libPluginTa2TwoSixStub.so.json.5  libPluginTa2TwoSixStub.so.json.6  libPluginTa2TwoSixStub.so.json.7  libb64.so.0d.json  libb64.so.0d.json.0  libb64.so.0d.json.1  libb64.so.0d.json.10  libb64.so.0d.json.11  libb64.so.0d.json.12  libb64.so.0d.json.13  libb64.so.0d.json.14  libb64.so.0d.json.15  libb64.so.0d.json.2  libb64.so.0d.json.3  libb64.so.0d.json.4  libb64.so.0d.json.5  (+21 more)
artifact-manager-plugin/src/: Android.mk  Application.mk  CMakeLists.txt  Makefile  cmake_install.cmake  download.cpp  shard.cpp  slothy.cpp
artifact-manager-plugin/src/interfaces/amp/: slothy-amp.cpp
artifact-manager-plugin/src/interfaces/http/: slothy-http.cpp
artifact-manager-plugin/src/interfaces/race/: Message.cpp  RaceApp.cpp  RaceInterface.cpp  RaceUtil.cpp  ReceivedMessage.cpp  UserInputResponseCache.cpp  UserInputResponseParser.cpp  slothy-race.cpp
artifact-manager-plugin/src/interfaces/race/demo/: CMakeLists.txt  race-download.cpp
artifact-manager-plugin/src/util/: base64.cpp  concat.cpp  crypto_secretbox.cpp  file_descriptor.cpp  hazmat.c  hex.cpp  kernel.cpp  logger.cpp  profiler.cpp  rs_shard.cpp  sleep.cpp  sss.c
registry-client/: CMakeLists.txt  README.md  build_it.sh  build_it_with_docker.sh  clean_artifacts.sh  helper_functions.sh  push_app_to_artifactory.sh
registry-client/include/: registry.h
registry-client/include/db/: registryDatabase.h
registry-client/include/db/schema/: schema.h  v1.h  versionedSchema.h
registry-client/include/http/: httpServer.h  request.h  ssl.h
registry-client/include/race/: Message.h  RaceApp.h  RaceInterface.h  RaceInterfaceBuilder.h  RaceUtil.h  ReceivedMessage.h  UserInputResponseParser.h  createPidFile.h
registry-client/include/race/output/: NodeDaemonPublisher.h
registry-client/include/util/: strlib.h
registry-client/rib-resources/: app-manifest.json  install.sh
registry-client/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  registry.cpp
registry-client/src/db/: CMakeLists.txt  registryDatabase.cpp
registry-client/src/db/schema/: schema.cpp  v1.cpp  versionedSchema.cpp
registry-client/src/http/: httpServer.cpp  request.cpp  ssl.cpp
registry-client/src/race/: CMakeLists.txt  RaceInterface.cpp  RaceInterfaceBuilder.cpp  RaceUtil.cpp  UserInputResponseCache.cpp  UserInputResponseParser.cpp  createPidFile.cpp
registry-client/src/race/client/: RaceApp.cpp  RaceAppBk.cpp  ReceivedMessage.cpp
registry-client/src/race/message/: Message.cpp
registry-client/src/race/output/: NodeDaemonPublisher.cpp
registry-client/src/util/: strlib.cpp
shard-host-server/: .gitignore  Dockerfile  README.md  shard-host-server.py
shard-sharding-server/: .gitignore  Dockerfile  Dockerfile~  README.md  docker-compose.yml  run_tests.sh  test.sh  test.sh~
shard-sharding-server/requirements/: requirements.txt  requirements.txt~  testing_requirements.txt
shard-sharding-server/src/: server.py  settings.py  urls.py  wsgi.py
shard-sharding-server/test_data/: json_generator_deps.py  json_generator_rnodes.py  json_generator_snodes.py
(+37 files in other folders)
